# embedded-development

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  performance-optimization-guide.md  rust-toolchain.toml
01-rust-basics/: 01-variables-types.md  02-ownership.md  03-control-flow.md  04-functions-closures.md  05-structs-enums.md  06-collections.md  07-generics-traits.md  08-lifetimes.md  09-error-handling.md  10-modules.md  11-concurrency.md  12-smart-pointers.md  13-macros.md  14-async-programming.md  15-unsafe-rust.md  Cargo.toml  README.md
01-rust-basics/examples/: README.md  advanced_ownership.rs  collections_demo.rs  concurrency_demo.rs  control_flow_demo.rs  error_handling.rs  error_handling_demo.rs  functions_closures_demo.rs  macro_system.rs  ownership_demo.rs  smart_pointers.rs  structs_enums_demo.rs  variables_demo.rs
01-rust-basics/exercises/: README.md  advanced_exercises.rs  basic_exercises.rs  benchmarks.rs  comprehensive_exercises.rs  exercise_01_variables.rs  exercise_02_ownership.rs  exercise_03_control_flow.rs  exercise_04_functions.rs  exercise_05_structs_enums.rs
01-rust-basics/projects/: README.md
01-rust-basics/projects/rust_fundamentals/: Cargo.toml
01-rust-basics/projects/rust_fundamentals/src/: main.rs
01-rust-basics/src/: collections.rs  concurrency.rs  error_handling.rs  functions.rs  lib.rs  ownership.rs  performance.rs
02-environment-setup/projects/basic-setup/: Cargo.toml
02-environment-setup/projects/debug-setup/: Cargo.toml
03-embedded-concepts/examples/communication-stack/: Cargo.toml
03-embedded-concepts/examples/communication-stack/src/: main.rs
03-embedded-concepts/examples/memory-layout/: Cargo.toml  memory.x
03-embedded-concepts/examples/memory-layout/.cargo/: config.toml
03-embedded-concepts/examples/memory-layout/src/: main.rs
03-embedded-concepts/projects/bootloader/: Cargo.toml  README.md  build.rs  memory-app.x  memory-bootloader.x
03-embedded-concepts/projects/bootloader/src/: application.rs  bootloader.rs
03-embedded-concepts/projects/memory-manager/: Cargo.toml  README.md
03-embedded-concepts/projects/memory-manager/src/: lib.rs
03-embedded-concepts/projects/memory-manager/src/allocators/: buddy.rs  mod.rs  pool.rs  slab.rs  stack.rs
03-embedded-concepts/projects/memory-manager/src/memory/: manager.rs  mod.rs  statistics.rs  tracker.rs
03-embedded-concepts/projects/memory-manager/src/utils/: alignment.rs  bitmap.rs  mod.rs
03-embedded-concepts/projects/scheduler/: Cargo.toml  README.md
03-embedded-concepts/projects/scheduler/src/: lib.rs  scheduler_trait.rs
03-embedded-concepts/projects/scheduler/src/analysis/: mod.rs
03-embedded-concepts/projects/scheduler/src/schedulers/: deadline_monotonic.rs  edf.rs  hybrid.rs  least_slack_time_first.rs  mod.rs  pip.rs  rate_monotonic.rs
03-embedded-concepts/projects/scheduler/src/sync/: mod.rs
03-embedded-concepts/projects/scheduler/src/tasks/: mod.rs
04-gpio-control/examples/advanced-gpio/: Cargo.toml  README.md
04-gpio-control/examples/advanced-gpio/src/: lib.rs  main.rs
04-gpio-control/projects/advanced_led_driver/: Cargo.toml
04-gpio-control/projects/advanced_led_driver/src/: main.rs
04-gpio-control/projects/basic-led/: Cargo.toml  README.md  memory.x
04-gpio-control/projects/basic-led/.cargo/: config.toml
04-gpio-control/projects/basic-led/src/: lib.rs  main.rs
04-gpio-control/projects/button-led/: Cargo.toml  rust-toolchain.toml
04-gpio-control/projects/button-led/.cargo/: config.toml
04-gpio-control/projects/button-led/src/: main.rs
04-gpio-control/projects/gpio-analysis/: Cargo.toml
04-gpio-control/projects/gpio-analysis/src/: main.rs
04-gpio-control/projects/gpio-interrupt/: Cargo.toml  README.md
04-gpio-control/projects/gpio-interrupt/.cargo/: config.toml
04-gpio-control/projects/gpio-interrupt/src/: main.rs
04-gpio-control/projects/hal_abstraction/: Cargo.toml
04-gpio-control/projects/hal_abstraction/src/: async_gpio.rs  error.rs  gpio.rs  interrupt.rs  lib.rs  main.rs  platform.rs
04-gpio-control/projects/hal_abstraction/src/platform/: mock.rs
04-gpio-control/projects/pwm-breathing/: Cargo.toml  README.md  memory.x
04-gpio-control/projects/pwm-breathing/src/: main.rs
04-gpio-control/projects/servo-control/: Cargo.toml  README.md
04-gpio-control/projects/servo-control/src/: main.rs
04-gpio-control/projects/traffic-light/: Cargo.toml  README.md
04-gpio-control/projects/traffic-light/src/: main.rs
04-gpio-control/projects/type_safe_gpio/: Cargo.toml
04-gpio-control/projects/type_safe_gpio/src/: main.rs
05-serial-communication/examples/basic-echo/: Cargo.toml
05-serial-communication/examples/basic-echo/src/: main.rs
05-serial-communication/examples/dma-transfer/: Cargo.toml
05-serial-communication/examples/dma-transfer/src/: basic_dma.rs  circular_dma.rs  double_buffer.rs  high_speed_logger.rs  lib.rs
05-serial-communication/examples/interrupt-uart/: Cargo.toml
05-serial-communication/examples/interrupt-uart/src/: basic_interrupt.rs  buffered_uart.rs  command_parser.rs
05-serial-communication/projects/async_uart/: CONTRIBUTING.md  Cargo.toml  LICENSE
05-serial-communication/projects/async_uart/docs/: project_summary.md
05-serial-communication/projects/async_uart/examples/: basic_usage.rs  protocol_demo.rs
05-serial-communication/projects/async_uart/src/: config.rs  error.rs  lib.rs
05-serial-communication/projects/async_uart/src/buffer/: dma_buffer.rs  mod.rs  ring_buffer.rs  stream_buffer.rs
05-serial-communication/projects/async_uart/tests/: integration_tests.rs
05-serial-communication/projects/protocol-stack/: Cargo.toml
05-serial-communication/projects/protocol-stack/src/: main.rs
07-interrupt-driven/: Cargo.toml
08-digital-io/: Cargo.toml  README.md
08-digital-io/src/: main.rs
examples/cross-platform/: Cargo.toml  README.md
examples/cross-platform/src/: algorithms.rs  async_support.rs  communication.rs  data.rs  error.rs  gpio.rs  lib.rs  sensor.rs  testing.rs  time.rs  traits.rs  utils.rs
tests/: Cargo.toml  integration_tests.rs
(+545 files in other folders)
