[package]
name = "integration-tests"
version = "1.0.0"
edition = "2021"
authors = ["Embedded Rust Tutorial Team"]
description = "Integration tests for the embedded development tutorial"

[[bin]]
name = "integration_tests"
path = "integration_tests.rs"

[dependencies]
# 基础依赖
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# 文件系统和路径操作
walkdir = "2.4"
glob = "0.3"

# 进程执行
tokio = { version = "1.35", features = ["full"] }

# 日志和输出
log = "0.4"
env_logger = "0.10"
colored = "2.1"

# 测试工具
regex = "1.10"

[dev-dependencies]
tempfile = "3.8"