[package]
name = "basic_setup"
version = "0.1.0"
edition = "2021"
authors = ["Embedded Development Team"]
description = "基础环境搭建验证项目"
license = "MIT OR Apache-2.0"
repository = "https://github.com/embedded-development/02-environment-setup"

[dependencies]
# 核心嵌入式依赖
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
nb = "1.1.0"

# 错误处理
panic-halt = "0.2.0"

# 可选的调试和日志功能
cortex-m-rtt = { version = "0.1.3", optional = true }
cortex-m-semihosting = { version = "0.5.0", optional = true }

# 平台特定依赖 (条件编译)
[target.'cfg(target_arch = "arm")'.dependencies]
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f411"], optional = true }
nrf52840-hal = { version = "0.16.0", optional = true }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = "0.10.1"
riscv-rt = "0.11.0"

[features]
default = ["rtt"]
rtt = ["cortex-m-rtt"]
semihosting = ["cortex-m-semihosting"]
stm32f4 = ["stm32f4xx-hal"]
nrf52 = ["nrf52840-hal"]

# 开发依赖
[dev-dependencies]
criterion = "0.5.1"

# 构建配置
[[bin]]
name = "environment_check"
path = "src/bin/environment_check.rs"

[[example]]
name = "toolchain_info"
path = "examples/toolchain_info.rs"

# 不同配置文件的优化设置
[profile.dev]
debug = true
opt-level = 0
overflow-checks = true

[profile.release]
debug = false
opt-level = "s"  # 优化代码大小
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
debug = true
opt-level = 1

# 构建脚本配置
[build-dependencies]
cc = "1.0"