[package]
name = "memory-layout-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = { version = "0.7.3", default-features = false }
panic-halt = "0.2.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = "s"