[package]
name = "advanced_led_driver"
version = "0.1.0"
edition = "2021"
authors = ["Embedded Developer <dev@example.com>"]
description = "高级LED驱动项目 - PWM调光、颜色控制和动态效果"
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/embedded-development"
readme = "README.md"
keywords = ["embedded", "led", "pwm", "rgb", "driver"]
categories = ["embedded", "no-std"]

[dependencies]
# 核心嵌入式依赖
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
nb = "1.0"
embedded-hal = "0.2"

# 调试和日志
rtt-target = { version = "0.4", features = ["cortex-m"], optional = true }
cortex-m-log = { version = "0.8", features = ["log-integration", "rtt"], optional = true }
log = "0.4"

# 数学和算法
micromath = "2.0"
heapless = "0.7"
num-traits = { version = "0.2", default-features = false }

# 时间和定时器
fugit = "0.3"

# 颜色处理
palette = { version = "0.7", default-features = false, features = ["std"], optional = true }
smart-leds = { version = "0.3", optional = true }
ws2812-spi = { version = "0.4", optional = true }

# 平台特定HAL库 (条件编译)
[target.'cfg(feature = "stm32f4")'.dependencies]
stm32f4xx-hal = { version = "0.16", features = ["rt", "stm32f407"] }

[target.'cfg(feature = "stm32f1")'.dependencies]
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103", "medium"] }

[target.'cfg(feature = "esp32")'.dependencies]
esp32-hal = "0.15"
esp-backtrace = { version = "0.8", features = ["esp32", "panic-handler", "exception-handler", "print-rtt"] }

[target.'cfg(feature = "rp2040")'.dependencies]
rp2040-hal = { version = "0.9", features = ["rt"] }
rp2040-boot2 = "0.3"

[dev-dependencies]
# 测试框架
embedded-test = "0.3"
defmt-test = "0.3"
defmt-rtt = "0.4"

# 基准测试
criterion = { version = "0.5", default-features = false }

[features]
default = ["stm32f4", "pwm-control", "rgb-support"]

# 平台支持
stm32f4 = []
stm32f1 = []
esp32 = []
rp2040 = []

# LED功能
pwm-control = []
rgb-support = ["palette", "smart-leds"]
ws2812-support = ["ws2812-spi", "smart-leds"]
matrix-display = []
brightness-control = []

# 高级功能
color-effects = ["palette"]
animation-engine = []
pattern-generator = []
music-sync = []

# 调试特性
debug-led = ["rtt-target", "cortex-m-log"]
performance-monitoring = []

[[bin]]
name = "advanced_led_driver"
path = "src/main.rs"

[[example]]
name = "pwm_dimming"
path = "examples/pwm_dimming.rs"

[[example]]
name = "rgb_color_mixing"
path = "examples/rgb_color_mixing.rs"

[[example]]
name = "led_matrix"
path = "examples/led_matrix.rs"

[[example]]
name = "ws2812_strip"
path = "examples/ws2812_strip.rs"

[[example]]
name = "breathing_effect"
path = "examples/breathing_effect.rs"

[[example]]
name = "color_wheel"
path = "examples/color_wheel.rs"

[profile.dev]
debug = true
opt-level = 1
overflow-checks = true
lto = false
codegen-units = 16

[profile.release]
debug = false
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# 性能优化配置
[profile.perf]
inherits = "release"
debug = true
lto = "thin"

# 大小优化配置
[profile.size]
inherits = "release"
opt-level = "s"
strip = true

[build-dependencies]
cc = "1.0"