[package]
name = "button-led"
version = "0.1.0"
edition = "2021"
authors = ["Rust Embedded Tutorial"]
description = "按键控制LED示例 - GPIO输入输出综合应用"

[dependencies]
# 核心嵌入式库
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "0.2"

# STM32F4 HAL库 - 只启用必要的特性
stm32f4xx-hal = { version = "0.19", features = ["stm32f407", "rt"], default-features = false }

# 嵌入式HAL特征
embedded-hal = { version = "1.0.0-rc.2", default-features = false }
nb = { version = "1.1", default-features = false }

# 调试和日志 - 条件编译，只在调试时启用
rtt-target = { version = "0.4", optional = true }

# 实用工具 - 轻量级配置
heapless = { version = "0.8", default-features = false }

# 按键防抖库 - 轻量级配置
debouncr = { version = "0.2.2", default-features = false }

[features]
default = ["rtt"]
rtt = ["dep:rtt-target"]

[[bin]]
name = "button-led"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = "s"
overflow-checks = true
# 减少LLVM优化时间
lto = false

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
panic = "abort"
strip = "symbols"