[package]
name = "gpio_analysis"
version = "0.1.0"
edition = "2021"
authors = ["Embedded Development Team"]
description = "GPIO硬件原理分析和电气特性测试项目"
license = "MIT OR Apache-2.0"

[dependencies]
# 核心嵌入式依赖
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
nb = "1.1.0"
panic-halt = "0.2.0"

# 调试和日志
cortex-m-rtt = "0.1.3"
rtt-target = { version = "0.4.0", features = ["cortex-m"], optional = true }
log = "0.4.20"

# 数学和统计
micromath = "2.1.0"
heapless = "0.8.0"

# 平台特定HAL库 (条件编译)
[target.'cfg(feature = "stm32f4")'.dependencies]
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f411"] }

[target.'cfg(feature = "esp32")'.dependencies]
esp32-hal = "0.16.0"

[target.'cfg(feature = "rp2040")'.dependencies]
rp-pico = "0.8.0"

[target.'cfg(feature = "nrf52")'.dependencies]
nrf52840-hal = "0.16.0"

[features]
default = ["stm32f4", "rtt-log"]
stm32f4 = []
esp32 = []
rp2040 = []
nrf52 = []
rtt-log = ["rtt-target"]

# 分析工具二进制文件
[[bin]]
name = "electrical_analysis"
path = "src/bin/electrical_analysis.rs"

[[bin]]
name = "timing_analysis"
path = "src/bin/timing_analysis.rs"

[[bin]]
name = "power_analysis"
path = "src/bin/power_analysis.rs"

[[example]]
name = "gpio_modes"
path = "examples/gpio_modes.rs"

[[example]]
name = "drive_strength"
path = "examples/drive_strength.rs"

# 优化配置
[profile.dev]
debug = true
opt-level = 1  # 轻微优化以获得更准确的时序测量
overflow-checks = true

[profile.release]
debug = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

# 专门的分析配置
[profile.analysis]
inherits = "release"
debug = true
opt-level = 2  # 平衡优化和调试信息