[package]
name = "gpio-interrupt"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心库
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

# HAL库
stm32f4xx-hal = { version = "0.21", features = ["stm32f407"] }
embedded-hal = "1.0"

# 中断和同步
cortex-m-rtic = "1.1"
rtic-monotonics = "1.0"

# 数据结构
heapless = "0.8"
nb = "1.0"

# 调试输出
defmt = "0.3"
defmt-rtt = "0.4"

# 时间处理
fugit = "0.3"

[dev-dependencies]
defmt-test = "0.3"

[profile.dev]
debug = 2
opt-level = "s"

[profile.release]
debug = 2
lto = true
opt-level = "s"