[package]
name = "servo-control"
version = "0.1.0"
edition = "2021"

[dependencies]
# 核心库
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"

# HAL库
stm32f4xx-hal = { version = "0.21", features = ["stm32f407"] }
embedded-hal = "1.0"

# 数学和时间处理
libm = "0.2"
nb = "1.0"

# 调试输出
defmt = "0.3"
defmt-rtt = "0.4"

# 状态机和控制
heapless = "0.8"

[dev-dependencies]
defmt-test = "0.3"

[profile.dev]
debug = 2
opt-level = "s"

[profile.release]
debug = 2
lto = true
opt-level = "s"